# NeuralForge

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  PROJECT_SPEC.md  README.md
.github/workflows/: bench.yml  ci.yml
bench/: Cargo.toml
bench/results/: 2026-05-09.md
bench/src/: main.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  lib.rs  main.rs
compiler/src/ir/: build.rs  error.rs  mod.rs  stdlib.rs  test_utils.rs  tests.rs  types.rs
compiler/src/lexer/: indent.rs  mod.rs  tests.rs  tokens.rs
compiler/src/parser/: mod.rs  tests.rs
compiler/src/passes/: eliminate_dropout.rs  fuse_linear_relu.rs  fuse_linear_softmax.rs  mod.rs  rewriter.rs  tests.rs
compiler/tests/: fixtures.rs  negative_fixtures.rs  uir_fixtures.rs  uir_tiny_mlp.rs
docs/language_reference/: grammar.md  uir.md
docs/profile_guide/: arm64.md  x86_64.md
inspect-render/: Cargo.toml
inspect-render/src/: lib.rs
language/: grammar.ebnf
nflc/: Cargo.toml
nflc/src/: main.rs
nflc/tests/: cli.rs  cli_compile.rs  cli_inspect.rs  cli_parse.rs
profile-api/: Cargo.toml
profile-api/src/: lib.rs
profiles/arm64/: Cargo.toml
profiles/x86_64/: Cargo.toml
tests/fixtures/: classifier.nfl  comments.nfl  dropout_only.nfl  ffn.nfl  four_input_matmul.nfl  large_classifier_k.nfl  large_classifier_n.nfl  layernorm_affine.nfl  layernorm_no_affine.nfl  m4_linear_relu.nfl  mixed_args.nfl  multi_input_attention.nfl  pipeline_styles.nfl  pre_ln_block.nfl  residual_add.nfl  self_attention.nfl  softmax_only.nfl  softmax_with_bias.nfl  tiny_mlp.nfl  transformer_block.nfl  two_input_matmul.nfl
(+128 files in other folders)
