[package]
name = "bench"
version = "0.1.0"
edition = "2021"
description = "NeuralForge per-profile bench harness (OQ-BENCH closure, M11)"
license.workspace = true

[dependencies]
compiler        = { path = "../compiler" }
profile-api     = { path = "../profile-api" }
profiles-arm64  = { path = "../profiles/arm64" }
profiles-x86_64 = { path = "../profiles/x86_64" }
libloading      = "0.8"
rand            = "0.8"
