[package]
name = "nflc"
version = "0.1.0"
edition = "2021"
description = "NeuralForge Language Compiler — CLI binary"
license.workspace = true

[dependencies]
compiler        = { path = "../compiler" }
profile-api     = { path = "../profile-api" }
profiles-arm64  = { path = "../profiles/arm64" }
profiles-x86_64 = { path = "../profiles/x86_64" }
inspect-render  = { path = "../inspect-render" }

[[bin]]
name = "nflc"
path = "src/main.rs"
